@@ -119,7 +119,7 @@ function dbconfig_get_rest($name) {
  * dj_get_file_contents) as encoded string.
  */
 function rest_encode_file($file, $sizelimit = TRUE) {
-	$maxsize = $sizelimit ? 50000 : -1;
+	$maxsize = $sizelimit ? (int) dbconfig_get_rest('output_storage_limit', 50000) : -1;
 	return urlencode(base64_encode(dj_get_file_contents($file, $maxsize)));
 }
 
