@@ -31,6 +31,7 @@ Version 5.2.0 - DEV
  - Implement better password hashing (#237 thanks Bert Peters).
  - Allow float timelimits (#235).
  - Changed semantics of dj_file_contents_get() optional size argument.
+ - Make storage and display limits for output/error files configurable.
 
 Version 5.1.0 - 7 December 2015
 -------------------------------
